# django_dz_22_3

./: .gitignore  README.md  pyproject.toml  requirements.txt
catalog/: urls.py  views.py
config/: settings.py
